--- a/example.ipynb
+++ b/example.ipynb
@@ -64,7 +64,7 @@
     "for i in tqdm(range(0, len(img_batch), batch_size)):\n",
     "    img = img_batch[i:i+batch_size].to(device)\n",
     "    target = target_batch[i:i+batch_size].to(device)\n",
-    "    attributions.append(mfaba_sharp(model, img, target))\n",
+    "    attributions.append(ISA(model, img, target))\n",
     "if attributions[0].shape.__len__() == 3:\n",
     "    attributions = [np.expand_dims(attribution, axis=0) for attribution in attributions]\n",
     "attributions = np.concatenate(attributions, axis=0)"
